--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
     margin-top: 15px;
-    margin-bottom: 100px; /* Adjust the margin-bottom value as needed */
+    margin-bottom: 100px; 
 }
 
 
@@ -61,7 +61,7 @@ select {
     overflow-y: auto;
 }
 #resultContainer {
-    display: none; /* Hide the result container initially */
+    display: none; 
 }
 
 
